Add tests to increase coverage from work related to the document processing upon submission.